(channel-news
 (version 0)
 (entry (commit "eaadc34d1e9f14c7b09e5eef595279e0b3a392f7")
        (title (en "Ttyh! Launcher package added")
               (ru "Добавлен пакет Ttyh! Launcher"))
        (body (en "Package name is @code{ttyhlauncher}.")
              (ru "Имя пакета @code{ttyhlauncher}."))))