@@ -4,4 +4,9 @@
         (title (en "Ttyh! Launcher package added")
                (ru "Добавлен пакет Ttyh! Launcher"))
         (body (en "Package name is @code{ttyhlauncher}.")
+              (ru "Имя пакета @code{ttyhlauncher}.")))
+ (entry (commit "8da331926995919c9dfece00bd7c1e72b9228d52")
+        (title (en "Ttyh! Launcher version bumped to 2.0.2")
+               (ru "Ttyh! Launcher обновлен до версии 2.0.2"))
+        (body (en "Package name is @code{ttyhlauncher}.")
               (ru "Имя пакета @code{ttyhlauncher}."))))
